    the bucardo_delta table. [GSM]

  - Do better checking of bucardo_ctl executable when MCP is restarting. [Ben Allen]

  - Allow the injection of custom messages into the Bucardo logs, and make 
    an interface for same in bucardo_ctl. [GSM]

  - Add the bucardo_rate table to track exactly how long replication takes
    on a per-sync and per-table basis. [GSM]

  - Change timestamp to timestamptz where needed inside Bucardo.pm [Yan Farmawan]

  - MCP listens for pings during table validations. [GSM]

  - Improve the FreeBSD scripts/bucardo_ctl.rc file [Ben Allen]

  - Put schema in db_getconn calls [Alex Bahlai]

  - Do not attempt respawn of MCP if mcp_dbproblem_sleep is 0. [GSM]

3.1.0 April 6, 2008

  - Fix race condition in bucardo_delta/bucardo_track updates 
    for pushdelta syncs. [GSM]

  - Auto-detect primary keys (or unique indexes) for added tables. [GSM]

  - Add update_bucardo_schema.pl to faciliate version changes. [GSM]

  - Use correct quoted/non-quoted versions of primary keys to allow 
    primary keys with spaces, etc. [GSM]

  - Add new options to log_showtime to show non-epoch time strings [GSM]

  - Make bucardo_ctl use the global version number, not its own. [GSM]

  - Support bytea in primary key and regular columns. [GSM]

3.0.9 Released March 26, 2008

  - Fix problem causing killed controller to not re-do interrupted syncs 
    on restart. [GSM]

3.0.8 Released February 5, 2008

  - Fix error in 'latest' conflict code. [Adam Wendt].

  - Filter out inactive target dbs from bucardo-report script.
    [Spencer Christensen <schristensen@backcountry.com>]

  - Fix race condition in bucardo_delta/bucardo_track updates 
    for pushdelta syncs. [GSM]

  - Fix a sorting problem in the bucardo-report script. [Jon Jensen <jon@endpoint.com>]

  - Fix problem with after_sync code not firing at correct time for staylive kids. [GSM]

3.0.7 Released October 11, 2007

 - Allow bucardo_ctl options to be specified in a .bucardorc file. [GSM]
